--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "multi-device_call-tool",
+    "name": "multidevice-call_tool",
     "version": "1.0.0",
-    "description": "## Project Name: Multi-Device Call Tool ## Team Members: Solo (Nontuthuzelo Ngwenya) ## Description of the Project:  The Multi-Device Call Tool allows users to link multiple devices (such as a mobile phone and tablets) to a single phone number. Users can register their devices, choose which device to activate for receiving calls, and manage device registrations seamlessly. This tool aims to provide flexibility and convenience by allowing calls to be routed to any of the registered devices based on user preference.",
+    "description": "## Project Name: MultiDevice-Call_Tool ## Team Members: Solo (Nontuthuzelo Ngwenya) ## Description of the Project:  The Multi-Device Call Tool allows users to link multiple devices (such as a mobile phone and tablets) to a single phone number. Users can register their devices, choose which device to activate for receiving calls, and manage device registrations seamlessly. This tool aims to provide flexibility and convenience by allowing calls to be routed to any of the registered devices based on user preference.",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
         "mongoose": "^8.5.3",
-        "multi-device_call-tool": "file:"
+        "multi-device_call-tool": "file:",
+        "multidevice-call_tool": "file:"
     }
 }
