--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,8 @@
+# Server Port
 PORT = 5000;
+
+# MongoDB URL
+MONGODB_URI=mongodb+srv://nicsadyngwenya:yqse7hTVC3jZ59Ro@cluster0.tc7f1.mongodb.net/?w=majority&appName=Cluster0
+
+# Other environment variables (if needed)
+JWT_SECRET=your_jwt_secret_key_here
