--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 # Server Port
-PORT = 5000;
+PORT=5000
 
 # MongoDB URL
 MONGODB_URI=mongodb+srv://nicsadyngwenya:yqse7hTVC3jZ59Ro@cluster0.tc7f1.mongodb.net/?w=majority&appName=Cluster0
